# boidsGL

./: CMakeLists.txt  README.md  boid.cpp  boid.hpp  flock.cpp  flock.hpp  main.cpp  options.cpp  options.hpp  velox.cpp  velox.hpp
SFML/lib/cmake/SFML/: SFMLConfigVersion.cmake
SFML/lib/cmake/freetype/: freetype-config-version.cmake
src/: boid.cpp  boid.hpp  flock.cpp  flock.hpp  main.cpp  options.cpp  options.hpp  velox.cpp  velox.hpp
tests/: CMakeLists.txt  tests.cpp
